Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103495

QNetworkSettingsWireless::supportsSecurity doesn't report correct Wifi security protocol

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 5.15.15
    • 5.15.9, 5.15.6
    • None
    • Boot2Qt 5.15.9/Yocto Zeus/iMX8Mini SOM from MSC
    • Linux/Yocto
    • b118417cb (5.15)

    Description

      The supported security protocols of a Wifi service reported by QNetworkSettingsWireless::supportsSecurity are not reliable. They change randomly in environments with a lot of Wifi services. 

      Root cause:

      1. The security protocols of an Wifi service are saved in the class QNetworkSettingsWireless in the member variable m_securityFlags
      2. They are saved assigned by bitwise OR in QNetworkSettingsWireless::setSecurity
      3. The problem is that the m_securityFlags variable is not initialized in the constructor and therefore when checked via bitwise OR return unpredictable values. 

      Fix:

      Initialize m_securityFlags to 0 in the constructor of QNetworkSettingsWireless

      In addition the other member variables of QNetworkSettingsWireless should be also initialized, e.g. m_hidden=false, m_signalStrength=0, m_isOutOfRange=false

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            papetaja Pasi Petäjäjärvi
            christof_schultz Christof Schultz
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes