Fix reporting correct security protocol

Class variables where not initialized to any default values and could
be random.

Fixes: QTBUG-103495
Change-Id: Ifa8bd7b860bb2fa81d113a14bd0a081935209b55
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>